Attempt to fix mobile horizontal scroll

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -32,6 +32,7 @@ body {
       left: 24px;
       right: 24px;
     }
+    overflow-y: hidden;
   }
 }
 
